# qa_guru_7_19

./: .gitignore  pyproject.toml  requirements.txt  test_reqres.py  utils.py
json_schemas/: get_fact.json  get_single_user.json  get_users.json  post_users.json  put_users.json
tests/: test_catfacts.py  test_reqres.py
